.gitignore updated again cause I was stupid

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Basic stuff
-/storage/secrets.json
-/storage/cookies.txt
-/info/server_info.json
-/info/member_info.json
-/testing.py
+storage/secrets.json
+storage/cookies.txt
+info/server_info.json
+info/member_info.json
+testing.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
