--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# Basic stuff
-storage/secrets.json
-storage/cookies.txt
-info/server_info.json
-info/member_info.json
-testing.py
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -167,3 +160,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+storage/secrets.env
+a.py
+base.json
+info/member_info.json
+info/server_info.json
+moretest.py
+run.bat
+testing.py
+storage/economy/economy.json
