--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ discord.py==2.4.0
 PyNaCl==1.5.0
 Pillow==11.0.0
 moviepy==1.0.3
-yt-dlp==2024.10.22
 pet-pet-gif==1.0.2
 ossapi==5.0.1
+python-dotenv
