--- a/.gitignore
+++ b/.gitignore
@@ -160,14 +160,18 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Main files
 storage/secrets.env
-a.py
-base.json
 info/member_info.json
 info/server_info.json
-moretest.py
-run.bat
-testing.py
 storage/economy/economy.json
+run.bat
+
+# Other testing stuff
+a.py
+base.json
+moretest.py
+testing.py
 cogs/testing.py
 cogs/work.py
