--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+# Discord related
+discord.py==2.4.0
+PyNaCl==1.5.0
+
+# Image processing
+Pillow==11.0.0
+numpy==2.1.1
+opencv-python==4.11.0.86
+
+# Data processing and visualization
 pandas==2.2.3
 matplotlib==3.9.2
+
+# HTTP and API
 aiohttp==3.10.10
 requests==2.32.3
 asyncpraw==7.8.0
-humanize==4.10.0
-discord.py==2.4.0
-PyNaCl==1.5.0
-Pillow==11.0.0
+
+# Video processing
 moviepy==1.0.3
-pet-pet-gif==1.0.2
-ossapi==5.0.1
+
+# Utility
+humanize==4.10.0
 python-dotenv==1.0.1
+pet-pet-gif==1.0.2
+
+# Game APIs
+ossapi==5.0.1  # osu! API
