--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ PyNaCl==1.5.0
 Pillow==11.0.0
 numpy==2.1.1
 opencv-python==4.11.0.86
+shapely==2.0.6
 
 # Data processing and visualization
 pandas==2.2.3 # Currently not used.
